# tauchain

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  Context.cpp  Context.h  DocumentLoader.h  JarCacheResource.h  JarCacheStorage.h  JsonLdApi.h  JsonLdConsts.h  JsonLdError.h  JsonLdOptions.h  JsonLdProcessor.h  JsonLdTripleCallback.h  JsonLdUrl.h  JsonLdUtils.h  JsonUtils.h  LICENSE  Makefile  NQuadRDFParser.h  NQuadTripleCallback.h  NormalizeUtils.h  Obj.h  RDFDataset.h  RDFDatasetUtils.h  RDFParser.h  README  README.md  Regex.h  RemoteDocument.h  TODO  ThreadPool.h  TurtleRDFParser.h  TurtleTripleCallback.h  UniqueNamer.h  a  addzz-query.natural3  addzz.natural3  (+163 more)
data/: n3-grammar.n3  n3-grammar.nq  n3test.nq
examples/: add  adder  addzz  alice_bob.tau  bigunsat.dimacs  bool  cnf  einstein.n3  euler_adder  euler_addzz  euler_addzz.js  factoring.dimacs  parity  reflexivity.tau  reflexivity2.tau  socrates  symmetry.tau  transitivity.tau  turing_machine  unsat.dimacs  unsat_by_consistency.n3  zeropoint
marpa/: marpa.cpp
n2vm/: Makefile  c.cpp  containers.cpp  containers.h  n2vm  n2vm.cpp  n2vm.h  n3driver.cpp  n3driver.h
newport/: .err.h.swp  .main.cpp.swp  .util.h.swp  Makefile  \  err.h  json_spirit_utils.h  json_spirit_value.h  jsonld.cpp  jsonldapi.h  loader.h  util.h
stlc/: Makefile  in  stlc.c
stuff/: CMakeLists.txt  asmtest.cpp  asmtest2.cpp  asmtest3.cpp  commit  design  equivalence.tau  euler.hmc.js  evil-query.jsonld  how-lambdas-work.cpp  lessifmorethan.py  notes  notes2  rdfs-rules.jsonld  socrates.jsonld  socrates.nt  switch  switch_no_check.cpp  syntax_errors.jsonld  t2.jsonld  tordf.sh  udplisten.py  udpsend.py  xaaxabxac.jsonld  z.jsonld  z.n3  ziv.jsonld
stuff/old/: CMakeLists.txt  commit  euler.cpp  euler.hmc.js  lessifmorethan.py
test_data/: addzz.natural3  authen.lemma.jsonld  digitalProcedure.jsonld  lemons2.jsonld  rdfs-doc.n3  rdfs-query-one.n3  rdfs-query.jsonld  rdfs-query.n3  rdfs-rules.n3  rdfs-rules.nq  rq1.jsonld  superman.q  superman.tau  who_likes_lemons.jsonld  zac.jsonld  zzz.jsonld
tests/: 2  2c  adder  alice_bob.tau  c  c-  cnf  einstein-with-prefix.n3  einstein.n3  equivalence.tau  list.tau  list_match.tau  list_unif.tau  listitem  listitem.tau  perm0  perm0b  perm0c  reflexivity.tau  reflexivity3.tau  transitivity.tau
tests/bad/: list-context
tests/builtin/: cwm-sum.n3  dht  first.n3  impl.n3  in_and_last.tau  list-bug1.n3  list-bug2.n3  list1.n3  list2.n3  list3.n3  list4.n3  list5.n3  list6.n3  outputString  r1.n3  unify2.n3  unify3.n3
tests/cli/: count  reflexivity.tau  superman.kb  superman.tau
tests/cppout/: 1  2  adder  badder  reflexivity2.tau
tests/dunno/: add  raw.php
tests/firstrest/: list  list2  list3  list4  list5  list6
tests/huge/: x.py
tests/lists/: 2c  3  countdown.tau  countdown2.tau  countdown3.tau  countup.tau  math.tau  substructural.tau  superstructural.tau  superstructuralprint.tau  superstructuralprint2.tau  two_items
tests/marpa/: einstein-with-prefix.n3
tests/rdf/: 2  domainImpliesType  domainImpliesType-tricky  domainImpliesType2  list  rd.t  resource2  something_a_class_something_subclassof_resource  subPropertyOf  subPropertyOf2  subPropertyOf3  type
tests/scripts/: outputString.py
tests/simple/: 1  1b  adder  alice_bob.tau  bob2  c  c-  equivalence-10.tau  hmm  list_match.tau  list_unif.tau  perm0  perm0c  reflexivity.tau  reflexivity2.tau  succ.tau  superman.tau  symmetry.tau  transitivity.tau  two_items
tests/slower/: adder  adder_better  adder_new  adder_old  badder_new  baddest_new  einstein.n3
tests/speed/: 0  1  2  3  adder  badder
tests/tbd/: cnf  equivalence-1.tau  equivalence.tau  equivalence2  eviltivity.tau  evilvalence.tau  evilvalence1.tau  symmetry.tau
tests/tbd/ep/: transitivity.tau
tests/tbd/steal/swap/: revfunc.n3  soc-rdfs.n3
tests/vis/: add  list1.tau
tools/: cnfgen.cpp  get_macros.sh  gettype.sh
ubi/: LICENSE_CLIENT.txt  README  UbigraphAPI.h  client.cpp  example.cpp
vis/: chew-it.py
vm/: Makefile  SDD  api.h  ast.cpp  ast.h  c.cpp  cfpds.c  cfpds.cpp  cfpds.h  containers.cpp  containers.h  data.h  e.c  e.h  eq.c  eq.h  ir.c  ir.cpp  ir.h  jit.c  jit.h  list.h  mutation_example.cpp  n3.c  n3.cpp  n3driver.cpp  n3driver.h  parr.h  parrint.h  refuter.cpp  refuter.h  rule.cpp  rule.h  rules.n3  rules.optimized.n3  rules.txt  strings.c  strings.h  subtree.cpp  tree.h  (+3 more)
vm/cimpl/: Makefile  ir.c  vm.h
